add time & ifttt by email

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div id="add-new-item">
             <div class="toggle-all"></div>
             <input id="new-todo" type="text" placeholder="What needs to be done?" autofocus>
+            <div class="date-select"></div>
             <button id="add-btn">+</button>
         </div>
 
@@ -44,6 +45,7 @@
 <script src="model.js"></script>
 <script src="ajax.js"></script>
 <script src="provider-ajax.js"></script>
+<script src="ifttt.js"></script>
 <script src="todo.js"></script>
 </body>
 </html>
