add some annotations

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a class="selected">All</a></li>
                     <li><a class="">Active</a></li>
                     <li><a class="">Completed</a></li>
-                    <li><a class="td">Td</a></li>
+                    <li><a class="">Td</a></li>
                 </ul>
             </div>
             <scroll-container id="todo-list"></scroll-container>
