--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Todo List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no,maximum-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="todo.css"/>
-    <script src="compatible.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/todo.css"/>
+    <script src="./js/compatible.js"></script>
 </head>
 <body>
 <div id="todo-app">
@@ -63,13 +63,13 @@
         </div>
     </section>
 </div>
-<script src="hammer.min.js"></script>
-<script src="model.js"></script>
-<script src="ajax.js"></script>
-<script src="provider-ajax.js"></script>
-<script src="ifttt.js"></script>
-<script src="utils.js"></script>
-<script src="calender.js"></script>
-<script src="todo.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+<script src="./js/model.js"></script>
+<script src="./js/ajax.js"></script>
+<script src="./js/provider-ajax.js"></script>
+<script src="./js/ifttt.js"></script>
+<script src="./js/utils.js"></script>
+<script src="./js/calender.js"></script>
+<script src="./js/todo.js"></script>
 </body>
 </html>
