update name & add PPT

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Todo List</title>
+    <title>pp's Todo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no,maximum-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/todo.css"/>
     <script src="./js/compatible.js"></script>
@@ -10,7 +10,7 @@
 <body>
 <div id="todo-app">
     <header class="header">
-        <h1>todo list</h1>
+        <h1>pp's todo</h1>
     </header>
 
     <section class="main">
